corregido error de las clases css

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
       <div class="nav-wrapper">
         <a href="#" class="brand-logo">Agrognome</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><%=link_to" <i class='material-icons left'>fingerprint</i>Login".html_safe,@user%></li>
+          <li><%=link_to" <i class='material-icons left'>fingerprint</i>Login".html_safe%></li>
           <li><%=link_to" <i class='material-icons left'>assignment</i>Registrate.!".html_safe%></li>
         </ul>
       </div>
@@ -13,7 +13,6 @@
     <h1 class="center h1_header">¡Agrognome!</h1>
     <h3 class="center h3_header">Sabemos la importancia de la organización</h3>
     <h3 class="center h3_header">y los buenos procesos en tu finca</h3>
-    <h3></h3>
   </div>
   <div class="container container2">
     <div class="row">
