--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -1,4 +1,4 @@
-<body>
+
 <body class="body-login">
 <nav class="transparent z-depth-0">
   <div class="nav-wrapper">
@@ -74,5 +74,6 @@
   </div>
 
 </div>
-</body>
+<div class="container">
+</div>
 </body>
